# Digital-archieve

./: .editorconfig  .env.example  DEPLOY_RENDER.md  Dockerfile  IDADRS.sln  README.md  REQUIREMENTS.md  Untitled  build_native.sh  check.sql  del_admin.sql  docker-compose.yml  promote.sql  render.yaml  seed.sql
.github/workflows/: ci.yml
client/: app.js  index.html  style.css
src/IDADRS.API/: IDADRS.API.csproj  Program.cs  appsettings.Development.json
src/IDADRS.API/Controllers/: AuthController.cs  CategoriesController.cs  DocumentsController.cs  ReportsController.cs  UsersController.cs
src/IDADRS.API/Filters/: ValidationFilter.cs
src/IDADRS.API/Middleware/: AccessLogMiddleware.cs  GlobalExceptionMiddleware.cs
src/IDADRS.Application/: IDADRS.Application.csproj
src/IDADRS.Application/DTOs/: ApiResponse.cs  AuditReportDto.cs  CategoryCreateDto.cs  CategoryResponseDto.cs  DocumentCreateDto.cs  DocumentResponseDto.cs  DocumentUpdateDto.cs  LoginRequestDto.cs  LoginResponseDto.cs  RefreshTokenRequestDto.cs  RegisterRequestDto.cs  UpdateUserDto.cs  UsageReportDto.cs  UserResponseDto.cs
src/IDADRS.Application/Interfaces/: IAuthService.cs  ICategoryService.cs  IDocumentService.cs  IFileStorageService.cs  IJwtService.cs  IReportService.cs  IUserService.cs
src/IDADRS.Application/Services/: AuthService.cs  CategoryService.cs  DocumentService.cs  FileStorageService.cs  JwtService.cs  ReportService.cs  UserService.cs
src/IDADRS.Application/Validators/: CategoryCreateValidator.cs  DocumentCreateValidator.cs  LoginRequestValidator.cs  RegisterRequestValidator.cs
src/IDADRS.Core/: IDADRS.Core.csproj
src/IDADRS.Core/Entities/: AccessLog.cs  Category.cs  Document.cs  RefreshToken.cs  User.cs
src/IDADRS.Core/Enums/: UserRole.cs
src/IDADRS.Core/Interfaces/: IAccessLogRepository.cs  ICategoryRepository.cs  IDocumentRepository.cs  IRefreshTokenRepository.cs  IRepository.cs  IUnitOfWork.cs  IUserRepository.cs
src/IDADRS.Infrastructure/: IDADRS.Infrastructure.csproj
src/IDADRS.Infrastructure/Persistence/: AppDbContext.cs  AppDbContextFactory.cs  UnitOfWork.cs
src/IDADRS.Infrastructure/Repositories/: AccessLogRepository.cs  CategoryRepository.cs  DocumentRepository.cs  GenericRepository.cs  (+2 more)
src/IDADRS.NativeSearch/: CMakeLists.txt  IDADRS.NativeSearch.csproj  INativeSearchService.cs  NativeSearchInterop.cs  NativeSearchService.cs  ServiceCollectionExtensions.cs  search_engine.c  search_engine.h
tests/IDADRS.Tests/: IDADRS.Tests.csproj
(+7 files in other folders)
